--- a/_pages/open_source.html
+++ b/_pages/open_source.html
@@ -1,3 +1,14 @@
 ---
 permalink: /open_source/
 ---
+
+<ul class='class_ul ' >
+					<li><a href='https://github.com/ccloquet/showme'><b>ShowMe</b> : live streaming pour centres 112</a></li>
+					<li><a href='https://github.com/ccloquet/quickgrid'><b>Quickgrid</b> : s'autolocaliser par rapport à un carroyage ou à un parcours</a></li>
+					<li><a href='https://github.com/ccloquet/streetslist'>Créer une <b>carte murale</b> avec Openstreetmap/Omniscale</a></li>
+					<li><a href='https://github.com/ccloquet/sigfox-wifi-geoloc'><b>Géolocalisation sans GPS</b> transmise sans internet</a></li>
+					<li class="li_hidden"><a href='https://github.com/ccloquet/walloon_flood_alert'><b>Recevoir des alertes</b> en cas de crue en Région Wallonne</a></li>
+					<li class="li_hidden"><a href='https://github.com/ccloquet/mountain'><b>Recevoir la météo à 48 h</b> par SMS</a></li>
+				</ul>
+
+<li><b>Initiatives</b> : <a title='Rassurer ses proches après une catastrophe' href='http://www.203040.be'>203040.be</a> | <a href='https://www.facebook.com/Collecto-Test-Bot-1219687344797226'>Collecto Test Bot</a> | <a title ="Améliorer l'implication des citoyens en situation de crise" href='http://citizensindisasters.wikispaces.com'>citizensindisasters.wikispaces.com</a> | <a title='Votre vision sur les projets à développer au niveau européen' href='https://mypoppy.typeform.com/to/uwVNxR'>Questionnaire besoins</a></li>
