--- a/_pages/presas.html
+++ b/_pages/presas.html
@@ -1,22 +1,32 @@
 ---
-layout: collection
 permalink: /presas/
 ---
+<b>Présentations</b>
 <ul class='class_ul'>
-					<li><a href="http://www.rescue-week.com/accueil.html"><b>QGIS pour les services de secours</b></a>, Rescue Week</a>, Paris, 6 avril 2019</li>
-					<li><a href=''><b>Cartographie évènementielle</b></a> Institut Charles Péguy, Louvain-la-Neuve, décembre 2018</li>
-					<li><a href='https://docs.my-poppy.eu/20181027_geong_poppy_v2.pdf'><b>GAFAM and/or Open source?</b></a> <a href="http://www.cartong.org/geong/2018">GeoONG</a>, Chambéry, octobre 2018</li>
-					<li><a href='https://docs.my-poppy.eu/230181025_Cloquet_Quickgrid.pdf'><b>Quickgrid : auto-localisation pour les secours lors de grands évènements</b></a> FOSS4G-BE, Bruxelles, 25-10-2018</li>
-					<li><a href='https://docs.my-poppy.eu/20180517_FOSS4G_FR_Poppy_quickgrid.pdf'><b>Quickgrid</b></a> FOSS4G-FR, Paris, 17-05-2018</li>
-					<li class="li_hidden"><a href='https://docs.my-poppy.eu/20180210_secoursexpo_qgis.pdf'><b>QGIS pour les services de secours</b></a> Secours Expo, Paris,10-02-2018</li>
-					<li class="li_hidden"><a href='https://docs.my-poppy.eu/20170119_mobile_phone.pdf'><b>Mobile phone data in humanitarian contexts</b></a> :12-01-2017   </li>
-					<li class="li_hidden"><a href='https://docs.my-poppy.eu/20161010_citizens_CoU_v3.pdf'><b>Empowering citizens in crisis situations</b></a> : CoU in Security Research Meeting, 2016  <a href='https://livestream.com/LVS/events/6426374/videos/138443074'>Video (begins at 1:29:00)</a></li>
-					<li class="li_hidden"><b>Routing</b> : <a href='https://docs.my-poppy.eu/20160511_FOSS4G_FR_Poppy.pdf'>FOSS4G-Fr, 2016</a> | <a href='https://docs.my-poppy.eu/20160922_FOSS4G_BE_Poppy.pdf'>FOSS4G-Be, 2016</a></li>
-					<li class="li_hidden"><b>Waterloo 2015</b> : <a href='https://docs.my-poppy.eu/20151026_foss4G_Poppy_Cloquet.pdf'>FOSS4G-Be, 2015</a> | <a href='https://docs.my-poppy.eu/20151119_seminaire_planification_urgence_waterloo.pdf'>ULB, 2016</a></li>
-</li>
-				</ul>
+<li><a href="http://www.rescue-week.com/accueil.html"><b>QGIS pour les services de secours</b></a>, Rescue Week</a>, Paris, 6 avril 2019</li>
+<li><a href=''><b>Cartographie évènementielle</b></a> Institut Charles Péguy, Louvain-la-Neuve, décembre 2018</li>
+<li><a href='https://docs.my-poppy.eu/20181027_geong_poppy_v2.pdf'><b>GAFAM and/or Open source?</b></a> <a href="http://www.cartong.org/geong/2018">GeoONG</a>, Chambéry, octobre 2018</li>
+<li><a href='https://docs.my-poppy.eu/230181025_Cloquet_Quickgrid.pdf'><b>Quickgrid : auto-localisation pour les secours lors de grands évènements</b></a> FOSS4G-BE, Bruxelles, 25-10-2018</li>
+<li><a href='https://docs.my-poppy.eu/20180517_FOSS4G_FR_Poppy_quickgrid.pdf'><b>Quickgrid</b></a> FOSS4G-FR, Paris, 17-05-2018</li>
+<li class="li_hidden"><a href='https://docs.my-poppy.eu/20180210_secoursexpo_qgis.pdf'><b>QGIS pour les services de secours</b></a> Secours Expo, Paris,10-02-2018</li>
+<li class="li_hidden"><a href='https://docs.my-poppy.eu/20170119_mobile_phone.pdf'><b>Mobile phone data in humanitarian contexts</b></a> :12-01-2017   </li>
+<li class="li_hidden"><a href='https://docs.my-poppy.eu/20161010_citizens_CoU_v3.pdf'><b>Empowering citizens in crisis situations</b></a> : CoU in Security Research Meeting, 2016  <a href='https://livestream.com/LVS/events/6426374/videos/138443074'>Video (begins at 1:29:00)</a></li>
+<li class="li_hidden"><b>Routing</b> : <a href='https://docs.my-poppy.eu/20160511_FOSS4G_FR_Poppy.pdf'>FOSS4G-Fr, 2016</a> | <a href='https://docs.my-poppy.eu/20160922_FOSS4G_BE_Poppy.pdf'>FOSS4G-Be, 2016</a></li>
+<li class="li_hidden"><b>Waterloo 2015</b> : <a href='https://docs.my-poppy.eu/20151026_foss4G_Poppy_Cloquet.pdf'>FOSS4G-Be, 2015</a> | <a href='https://docs.my-poppy.eu/20151119_seminaire_planification_urgence_waterloo.pdf'>ULB, 2016</a></li>
+</ul>
+<br>
 
+<b>Documents</b> 
+<ul class='class_ul'>
+<li><a href="http://www.guideorganisateur.com/coin-des-experts/des-donnees-mobiles-pour-observer-la-foule/">Des données mobiles pour observer la foule (2015)</a></li>
+<li><a title="Outils technologiques récents pour gérer des petites et grandes crises" href="https://docs.my-poppy.eu/2016_kta_poppy_devancer_inattendu.pdf">Devancer l'inattendu (2016)</a></li>
+<li><a title="La géolocalisation au service des professionnels en situation complexe " href="https://docs.my-poppy.eu/2017_geoloc_poppy.pdf">Géolocalisation (2017)</a></li>
+</ul>
+<br>
 
-<li><b>Documents</b> : <a href="http://www.guideorganisateur.com/coin-des-experts/des-donnees-mobiles-pour-observer-la-foule/">Des données mobiles pour observer la foule (2015)</a> | <a title="Outils technologiques récents pour gérer des petites et grandes crises" href="https://docs.my-poppy.eu/2016_kta_poppy_devancer_inattendu.pdf">Devancer l'inattendu (2016)</a> | <a title="La géolocalisation au service des professionnels en situation complexe " href="https://docs.my-poppy.eu/2017_geoloc_poppy.pdf">Géolocalisation (2017)</a> </li>
-
-<li><b>Recherche</b> : <a title='analyse de données de réseaux dans la métropole Bruxelloise, UCL' href=''>BruNet</a> | <a title='analyse de données de voyages en train, UCL' href=''>analyse de données d'iRail</a> | <a title="prévision d'affluence avec des données de téléphonie mobile -- financement UCL & FNRS" href='https://docs.my-poppy.eu/2014_crowd_els_sub.pdf'>e-Crowd (projet pré-existant)</a>
+<b>Recherche</b> 
+<ul>
+<li><a title='analyse de données de réseaux dans la métropole Bruxelloise, UCL' href=''>Analyse de données de réseaux dans la métropole Bruxelloise</a></li>
+<li><a title='analyse de données de voyages en train, UCL' href=''>Analyse de données d'iRail</a></li>
+<li> <a title="prévision d'affluence avec des données de téléphonie mobile -- financement UCL & FNRS" href='https://docs.my-poppy.eu/2014_crowd_els_sub.pdf'>e-Crowd (projet pré-existant)</a></li>
+</ul>
