--- a/_pages/workshops.html
+++ b/_pages/workshops.html
@@ -12,6 +12,6 @@ permalink: /workshops/
 <li class="li_hidden"><a href='https://www.eventbrite.com/e/plans-durgence-amenagement-equipement-et-bonnes-pratiques-en-salle-de-crise-tickets-31108448206?ref=estw#'>Mar 2017 : <b>Plans d'urgence</b> : aménagement, équipement et bonnes pratiques en salle de crise (1)</a></li>
 <li class="li_hidden"><a href='https://www.eventbrite.com/e/lalerte-en-situation-de-crise-tickets-27796621443'>Oct 2016 : <b>Alerte</b> et circulation de l'information en situation de crise</a></li>
 <li class="li_hidden"><a href='https://www.eventbrite.com/e/fete-ou-securite-les-dilemmes-de-lorganisateur-registration-13834965755'>Dec 2014 : <b>Fête ou sécurité ? </b> Les dilemmes de l'organisateur</a></li>
-<li class="li_hidden"><a href='mailto:info@my-poppy.eu?subject=Ateliers'><b>M'informer</b> des prochains ateliers</a></li>
 </ul>
+<br><a href='mailto:info@my-poppy.eu?subject=Ateliers' target='_blank' style='background:#cb732b; color:white; border-radius:5px;padding:10px'>M'informer des prochains ateliers</a>
 
