--- a/_pages/events_upcoming.html
+++ b/_pages/events_upcoming.html
@@ -2,10 +2,12 @@
 layout: collection
 permalink: /events_upcoming/
 ---
-<div class="title"><b>Crisis & emergency management:<br>upcoming events</b></div>
-	<div id="events2come" style='font-weight:normal;text-align:left'>
-	</div>
-	<br><a href='https://mypoppy.typeform.com/to/sww4k6' target='_blank' style='background:#cb732b; color:white; border-radius:5px;padding:10px'>Keep me up to date!</a>
+b>Crisis & emergency management:<br>upcoming events</b>
+
+<div id="events2come" style='font-weight:normal;text-align:left'>
+</div>
+<br><a href='https://mypoppy.typeform.com/to/sww4k6' target='_blank' style='background:#cb732b; color:white; border-radius:5px;padding:10px'>Keep me up to date!</a>
+<br><br>
 
 <b>past events</b>
 <div id="eventspast" style='font-weight:normal;text-align:left'>
