--- a/_pages/open_source.html
+++ b/_pages/open_source.html
@@ -2,11 +2,12 @@
 permalink: /open_source/
 ---
 
-<b>Des projets dont le code est en accès libre:</b><br>
-<ul class='class_ul ' >
-<li><a href='https://github.com/ccloquet/showme'><b>ShowMe</b> : live streaming pour centres 112</a></li>
-<li><a href='https://github.com/ccloquet/quickgrid'><b>Quickgrid</b> : s'autolocaliser par rapport à un carroyage ou à un parcours</a></li>
-<li><a href='https://github.com/ccloquet/streetslist'>Créer une <b>carte murale</b> avec Openstreetmap/Omniscale</a></li>
+<b>Des projets dont le code est en accès libre: sur GitHub</b><br>
+<ul>
+<li><a href='https://github.com/ccloquet/showme'><b>ShowMe</b></a> : live streaming pour centres 112</li>
+<li><a href='https://github.com/ccloquet/112.camera'><b>112.camera</b> : live streaming pour centres 112, initié par l'appelant</a></li>
+<li><a href='https://github.com/ccloquet/quickgrid'><b>Quickgrid</b> : s'autolocaliser par rapport à un carroyage ou à un parcours</a>, sur évènement ou en situation de crise</li>
+<li><a href='https://github.com/ccloquet/streetslist'>Créer une <b>carte murale</b> géante avec Openstreetmap/Omniscale</a> pour les services d'urgence hospitaliers</li>
 <li><a href='https://github.com/ccloquet/sigfox-wifi-geoloc'><b>Géolocalisation sans GPS</b> transmise sans internet</a></li>
 <li class="li_hidden"><a href='https://github.com/ccloquet/walloon_flood_alert'><b>Recevoir des alertes</b> en cas de crue en Région Wallonne</a></li>
 <li class="li_hidden"><a href='https://github.com/ccloquet/mountain'><b>Recevoir la météo à 48 h</b> par SMS</a></li>
