--- a/_pages/workshops.html
+++ b/_pages/workshops.html
@@ -2,16 +2,15 @@
 permalink: /workshops/
 ---
 
-<ul class='class_ul ' >
-<li><a href=''>Nov 2018 : <b>IT pour les métiers de la sécurité</b></a></li>
-<li><a href='https://www.eventbrite.com/e/cartographie-avec-qgis-introduction-tout-public-tickets-47741340635'>Juil/août/sept/oct 2018 : <b>Cartographie avec QGIS pour les services de secours</b> : introduction</a><br><span style='color:rgba(255,255,255,0)'>&nbsp;&nbsp;Juil/août/sept/oct 2018 : </span> → 39 personnes formées en 2018 !</li>
-<li><a href='https://docs.my-poppy.eu/2018_poppy_ateliers.pdf'>Mai 2018 : <b>Outils de gestion de crise</b> : collaboration</a></li>
-<li class="li_hidden"><a href='https://docs.my-poppy.eu/2018_poppy_ateliers.pdf'>Apr 2018 : <b>Outils de gestion de crise</b> : communication</a></li>
-<li class="li_hidden"><a href='https://www.eventbrite.com/myevent?eid=38545129520'>Déc 2017 : <b>Employés</b> : pompiers ou pyromanes à l’ère des réseaux sociaux - approche stratégique</a></li>
-<li class="li_hidden"><a href=''>Jun 2017 : <b>Plans d'urgence</b> : aménagement, équipement et bonnes pratiques en salle de crise (2)</a></li>
-<li class="li_hidden"><a href='https://www.eventbrite.com/e/plans-durgence-amenagement-equipement-et-bonnes-pratiques-en-salle-de-crise-tickets-31108448206?ref=estw#'>Mar 2017 : <b>Plans d'urgence</b> : aménagement, équipement et bonnes pratiques en salle de crise (1)</a></li>
-<li class="li_hidden"><a href='https://www.eventbrite.com/e/lalerte-en-situation-de-crise-tickets-27796621443'>Oct 2016 : <b>Alerte</b> et circulation de l'information en situation de crise</a></li>
-<li class="li_hidden"><a href='https://www.eventbrite.com/e/fete-ou-securite-les-dilemmes-de-lorganisateur-registration-13834965755'>Dec 2014 : <b>Fête ou sécurité ? </b> Les dilemmes de l'organisateur</a></li>
-</ul>
+<a href=''>Nov 2018 : <b>IT pour les métiers de la sécurité</b></a><br>
+<a href='https://www.eventbrite.com/e/cartographie-avec-qgis-introduction-tout-public-tickets-47741340635'>Juil/août/sept/oct 2018 : <b>Cartographie avec QGIS pour les services de secours</b> : introduction</a><br>→ 39 personnes formées en 2018 !<br>
+<a href='https://docs.my-poppy.eu/2018_poppy_ateliers.pdf'>Mai 2018 : <b>Outils de gestion de crise</b> : collaboration</a><br>
+<a href='https://docs.my-poppy.eu/2018_poppy_ateliers.pdf'>Apr 2018 : <b>Outils de gestion de crise</b> : communication</a><br>
+<a href='https://www.eventbrite.com/myevent?eid=38545129520'>Déc 2017 : <b>Employés</b> : pompiers ou pyromanes à l’ère des réseaux sociaux - approche stratégique</a><br>
+<a href=''>Jun 2017 : <b>Plans d'urgence</b> : aménagement, équipement et bonnes pratiques en salle de crise (2)</a><br>
+<a href='https://www.eventbrite.com/e/plans-durgence-amenagement-equipement-et-bonnes-pratiques-en-salle-de-crise-tickets-31108448206?ref=estw#'>Mar 2017 : <b>Plans d'urgence</b> : aménagement, équipement et bonnes pratiques en salle de crise (1)</a><br>
+<a href='https://www.eventbrite.com/e/lalerte-en-situation-de-crise-tickets-27796621443'>Oct 2016 : <b>Alerte</b> et circulation de l'information en situation de crise</a><br>
+<a href='https://www.eventbrite.com/e/fete-ou-securite-les-dilemmes-de-lorganisateur-registration-13834965755'>Dec 2014 : <b>Fête ou sécurité ? </b> Les dilemmes de l'organisateur</a><br>
+
 <br><a href='mailto:info@my-poppy.eu?subject=Ateliers' target='_blank' style='background:#cb732b; color:white; border-radius:5px;padding:10px'>M'informer des prochains ateliers</a>
 
