--- a/_pages/open_source.html
+++ b/_pages/open_source.html
@@ -2,16 +2,21 @@
 permalink: /open_source/
 ---
 
-<b>Des projets dont le code est en accès libre: sur GitHub</b><br>
+<b>Des projets dont le code est en accès libre: sur GitHub</b>: profitez-en!<br>
 <ul>
 <li><a href='https://github.com/ccloquet/showme'><b>ShowMe</b></a> : live streaming pour centres 112</li>
 <li><a href='https://github.com/ccloquet/112.camera'><b>112.camera</b> : live streaming pour centres 112, initié par l'appelant</a></li>
 <li><a href='https://github.com/ccloquet/quickgrid'><b>Quickgrid</b> : s'autolocaliser par rapport à un carroyage ou à un parcours</a>, sur évènement ou en situation de crise</li>
 <li><a href='https://github.com/ccloquet/streetslist'>Créer une <b>carte murale</b> géante avec Openstreetmap/Omniscale</a> pour les services d'urgence hospitaliers</li>
 <li><a href='https://github.com/ccloquet/sigfox-wifi-geoloc'><b>Géolocalisation sans GPS</b> transmise sans internet</a></li>
-<li class="li_hidden"><a href='https://github.com/ccloquet/walloon_flood_alert'><b>Recevoir des alertes</b> en cas de crue en Région Wallonne</a></li>
-<li class="li_hidden"><a href='https://github.com/ccloquet/mountain'><b>Recevoir la météo à 48 h</b> par SMS</a></li>
+<li class="li_hidden"><a href='https://github.com/ccloquet/walloon_flood_alert'>En Région Wallonne, <b>recevoir des alertes</b> en cas de crue</a></li>
+<li class="li_hidden"><a href='https://github.com/ccloquet/mountain'><b>En montagne, recevoir la météo à 48 h</b> par SMS</a></li>
 </ul>
 
-<b>Quelques autres initiatives</b><br>
-<a title='Rassurer ses proches après une catastrophe' href='http://www.203040.be'>203040.be</a> | <a href='https://www.facebook.com/Collecto-Test-Bot-1219687344797226'>Collecto Test Bot</a> | <a title ="Améliorer l'implication des citoyens en situation de crise" href='http://citizensindisasters.wikispaces.com'>citizensindisasters.wikispaces.com</a> | <a title='Votre vision sur les projets à développer au niveau européen' href='https://mypoppy.typeform.com/to/uwVNxR'>Votre vision sur les projets à développer au niveau européen</a></li>
+<b>Quelques autres initiatives passées</b><br>
+<ul>
+<li><a href='http://www.203040.be'>203040.be</a> : rassurer ses proches après une catastrophe</li>
+<li><a href='https://www.facebook.com/Collecto-Test-Bot-1219687344797226'>Collecto Test Bot</a></li>
+<li><a href='http://citizensindisasters.wikispaces.com'>citizensindisasters.wikispaces.com</a>: Améliorer l'implication des citoyens en situation de crise</li>
+<li><a href='https://mypoppy.typeform.com/to/uwVNxR'>Votre vision</a> sur les projets à développer au niveau européen pour améliorer l'implication des citoyens en situation de crise</li>
+</ul>
