--- a/_pages/presas.html
+++ b/_pages/presas.html
@@ -16,11 +16,13 @@ permalink: /presas/
 </ul>
 <br>
 
-<b>Documents</b> 
+<b>Plaquettes</b> 
 <ul class='class_ul'>
+<li><a href="https://docs.my-poppy.eu/2017_geoloc_poppy.pdf">La géolocalisation au service des professionnels (2017)</a></li>
+<li><a href="https://docs.my-poppy.eu/2016_kta_poppy_devancer_inattendu.pdf">Devancer l'inattendu (2016)</a> : Outils technologiques récents pour gérer des petites et grandes crises</li>
 <li><a href="http://www.guideorganisateur.com/coin-des-experts/des-donnees-mobiles-pour-observer-la-foule/">Des données mobiles pour observer la foule (2015)</a></li>
-<li><a title="Outils technologiques récents pour gérer des petites et grandes crises" href="https://docs.my-poppy.eu/2016_kta_poppy_devancer_inattendu.pdf">Devancer l'inattendu (2016)</a></li>
-<li><a title="La géolocalisation au service des professionnels en situation complexe " href="https://docs.my-poppy.eu/2017_geoloc_poppy.pdf">Géolocalisation (2017)</a></li>
+
+
 </ul>
 <br>
 
