--- a/_pages/presas.html
+++ b/_pages/presas.html
@@ -32,3 +32,14 @@ permalink: /presas/
 <li><a title='analyse de données de voyages en train, UCL' href=''>Analyse de données d'iRail</a></li>
 <li> <a title="prévision d'affluence avec des données de téléphonie mobile -- financement UCL & FNRS" href='https://docs.my-poppy.eu/2014_crowd_els_sub.pdf'>e-Crowd (projet pré-existant)</a></li>
 </ul>
+
+<b>Autres documents</b>
+<ul>
+<li><a href='https://docs.my-poppy.eu/qgis/20180700_GIS_partie_1_intro_basics.pdf'>2018 tutoriel QGIS partie 1</a></li>
+<li><a href='https://docs.my-poppy.eu/qgis/20180700_GIS_partie_2_intro_specifics_emergency.pdf'>2018 tutoriel QGIS partie 2</a></li>
+<li><a href='https://docs.my-poppy.eu/qgis/20180700_GIS_partie_3_export.pdf'>2018 tutoriel QGIS partie 3</a></li>
+<li><a href='https://docs.my-poppy.eu'>docs.my-poppy.eu</a></li>
+</ul>
+
+
+
