--- a/_pages/presas.html
+++ b/_pages/presas.html
@@ -5,12 +5,12 @@ permalink: /presas/
 <ul class='class_ul'>
 <li><a href="http://www.rescue-week.com/accueil.html"><b>QGIS pour les services de secours</b></a>, Rescue Week</a>, Paris, 6 avril 2019</li>
 <li><a href=''><b>Cartographie évènementielle</b></a> Institut Charles Péguy, Louvain-la-Neuve, décembre 2018</li>
-<li><a href='https://docs.my-poppy.eu/20181027_geong_poppy_v2.pdf'><b>GAFAM and/or Open source?</b></a> <a href="http://www.cartong.org/geong/2018">GeoONG</a>, Chambéry, octobre 2018</li>
+<li><a href='https://docs.my-poppy.eu/20181027_geong_poppy_v2.pdf'><b>GAFAM and/or Open source?</b></a> <a href="http://www.cartong.org/geong/2018">GeoONG</a>, Chambéry, octobre 2018 <a href='https://www.youtube.com/watch?v=DmbYuWOOcEM&frags=pl%2Cwn&fbclid=IwAR3SRhn1gxxzOvgEDnyUvsvIKmcHyl0Rp20yC7eAgMjqtkz1yttZaHwV9gs'>Video</a> (starts at 14:52)</li>
 <li><a href='https://docs.my-poppy.eu/230181025_Cloquet_Quickgrid.pdf'><b>Quickgrid : auto-localisation pour les secours lors de grands évènements</b></a> FOSS4G-BE, Bruxelles, 25-10-2018</li>
 <li><a href='https://docs.my-poppy.eu/20180517_FOSS4G_FR_Poppy_quickgrid.pdf'><b>Quickgrid</b></a> FOSS4G-FR, Paris, 17-05-2018</li>
 <li class="li_hidden"><a href='https://docs.my-poppy.eu/20180210_secoursexpo_qgis.pdf'><b>QGIS pour les services de secours</b></a> Secours Expo, Paris,10-02-2018</li>
 <li class="li_hidden"><a href='https://docs.my-poppy.eu/20170119_mobile_phone.pdf'><b>Mobile phone data in humanitarian contexts</b></a> :12-01-2017   </li>
-<li class="li_hidden"><a href='https://docs.my-poppy.eu/20161010_citizens_CoU_v3.pdf'><b>Empowering citizens in crisis situations</b></a> : CoU in Security Research Meeting, 2016  <a href='https://livestream.com/LVS/events/6426374/videos/138443074'>Video (begins at 1:29:00)</a></li>
+<li class="li_hidden"><a href='https://docs.my-poppy.eu/20161010_citizens_CoU_v3.pdf'><b>Empowering citizens in crisis situations</b></a> : CoU in Security Research Meeting, 2016  <a href='https://livestream.com/LVS/events/6426374/videos/138443074'>Video</a> (starts at 1:29:00)</a></li>
 <li class="li_hidden"><b>Routing</b> : <a href='https://docs.my-poppy.eu/20160511_FOSS4G_FR_Poppy.pdf'>FOSS4G-Fr, 2016</a> | <a href='https://docs.my-poppy.eu/20160922_FOSS4G_BE_Poppy.pdf'>FOSS4G-Be, 2016</a></li>
 <li class="li_hidden"><b>Waterloo 2015</b> : <a href='https://docs.my-poppy.eu/20151026_foss4G_Poppy_Cloquet.pdf'>FOSS4G-Be, 2015</a> | <a href='https://docs.my-poppy.eu/20151119_seminaire_planification_urgence_waterloo.pdf'>ULB, 2016</a></li>
 </ul>
@@ -25,6 +25,13 @@ permalink: /presas/
 
 </ul>
 <br>
+<b>Presse</b> 
+<ul>
+<li>2018-10-01 Quickgrid dans <a href='https://www.diekeure.be/fr-be/professional/9163/be-prepared-nr-3-2018-tijdschrift-voor-noodplanning-en-crisisbeheer-be-prepared-n-3-2018-revue-de-planification-durgence-et-de-gestion-de-crise'>Be Prepared</a></li>
+<li>2017-02-03 <a href='https://docs.my-poppy.eu/Journal de 7h30 vendredi 0302.mp3'>Interview à Vivacité dans le cadre du salon Secours Expo</a></li>
+<li>2017-02-23 Contribution à l'article de Sandrine Mathen publié dans La Libre : <a href='https://www.lalibre.be/economie/digital/tour-d-horizon-des-applications-potentielles-pour-les-pouvoirs-locaux-une-smart-city-en-toute-securite-58a455cecd702bc31933b308'>Tour d’horizon des applications potentielles pour les pouvoirs locaux - Une smart city en toute sécurité</a></li>
+</ul>
+<br>
 
 <b>Recherche</b> 
 <ul>
@@ -32,6 +39,8 @@ permalink: /presas/
 <li><a title='analyse de données de voyages en train, UCL' href=''>Analyse de données d'iRail</a></li>
 <li> <a title="prévision d'affluence avec des données de téléphonie mobile -- financement UCL & FNRS" href='https://docs.my-poppy.eu/2014_crowd_els_sub.pdf'>e-Crowd (projet pré-existant)</a></li>
 </ul>
+
+<br>
 
 <b>Autres documents</b>
 <ul>
