--- a/_pages/presas.html
+++ b/_pages/presas.html
@@ -28,7 +28,7 @@ permalink: /presas/
 <b>Presse</b> 
 <ul>
 <li>2018-10-01 Quickgrid dans <a href='https://www.diekeure.be/fr-be/professional/9163/be-prepared-nr-3-2018-tijdschrift-voor-noodplanning-en-crisisbeheer-be-prepared-n-3-2018-revue-de-planification-durgence-et-de-gestion-de-crise'>Be Prepared</a></li>
-<li>2017-02-03 <a href='https://docs.my-poppy.eu/Journal de 7h30 vendredi 0302.mp3'>Interview à Vivacité dans le cadre du salon Secours Expo</a></li>
+<li>2017-02-03 <a href='https://docs.my-poppy.eu/Journal de 7h30 vendredi 0302.mp3'>Interview sur Vivacité dans le cadre du salon Secours Expo</a></li>
 <li>2017-02-23 Contribution à l'article de Sandrine Mathen publié dans La Libre : <a href='https://www.lalibre.be/economie/digital/tour-d-horizon-des-applications-potentielles-pour-les-pouvoirs-locaux-une-smart-city-en-toute-securite-58a455cecd702bc31933b308'>Tour d’horizon des applications potentielles pour les pouvoirs locaux - Une smart city en toute sécurité</a></li>
 </ul>
 <br>
