--- a/_pages/presas.html
+++ b/_pages/presas.html
@@ -11,6 +11,7 @@ permalink: /presas/
 <li class="li_hidden"><a href='https://docs.my-poppy.eu/20180210_secoursexpo_qgis.pdf'><b>QGIS pour les services de secours</b></a> Secours Expo, Paris,10-02-2018</li>
 <li class="li_hidden"><a href='https://docs.my-poppy.eu/20170119_mobile_phone.pdf'><b>Mobile phone data in humanitarian contexts</b></a> :12-01-2017   </li>
 <li class="li_hidden"><a href='https://docs.my-poppy.eu/20161010_citizens_CoU_v3.pdf'><b>Empowering citizens in crisis situations</b></a> : CoU in Security Research Meeting, 2016  <a href='https://livestream.com/LVS/events/6426374/videos/138443074'>Video</a> (starts at 1:29:00)</a></li>
+<li class="li_hidden"><a href='https://cirb.brussels/fr/nos-solutions/urbis-solutions/users-club-urbis-08-12-2016/20160812_CIRB_urbis_user_club.pdf'><b>Cartographie pour la planification d’urgence et la gestion de crise en RBC</b></a>, <a href='https://cirb.brussels/fr/nos-solutions/urbis-solutions/users-club-urbis-08-12-2016'>Urbis User Club</a> : 08-12-2016</li>
 <li class="li_hidden"><b>Routing</b> : <a href='https://docs.my-poppy.eu/20160511_FOSS4G_FR_Poppy.pdf'>FOSS4G-Fr, 2016</a> | <a href='https://docs.my-poppy.eu/20160922_FOSS4G_BE_Poppy.pdf'>FOSS4G-Be, 2016</a></li>
 <li class="li_hidden"><b>Waterloo 2015</b> : <a href='https://docs.my-poppy.eu/20151026_foss4G_Poppy_Cloquet.pdf'>FOSS4G-Be, 2015</a> | <a href='https://docs.my-poppy.eu/20151119_seminaire_planification_urgence_waterloo.pdf'>ULB, 2016</a></li>
 </ul>
