--- a/_pages/presas.html
+++ b/_pages/presas.html
@@ -4,6 +4,7 @@ permalink: /presas/
 <b>Présentations</b>
 <ul class='class_ul'>
 <li><a href="http://www.rescue-week.com/accueil.html"><b>QGIS pour les services de secours</b></a>, Rescue Week</a>, Paris, 6 avril 2019</li>
+<li><a href="https://begeo2019.be/fr/track-6"><b>Outils libres : aussi pour les entreprises !</b></a>, Be Geo 2019</a>, Bruxelles, 19 mars 2019</li>
 <li><a href=''><b>Cartographie évènementielle</b></a> Institut Charles Péguy, Louvain-la-Neuve, décembre 2018</li>
 <li><a href='https://docs.my-poppy.eu/20181027_geong_poppy_v2.pdf'><b>GAFAM and/or Open source?</b></a> <a href="http://www.cartong.org/geong/2018">GeoONG</a>, Chambéry, octobre 2018 <a href='https://www.youtube.com/watch?v=DmbYuWOOcEM&frags=pl%2Cwn&fbclid=IwAR3SRhn1gxxzOvgEDnyUvsvIKmcHyl0Rp20yC7eAgMjqtkz1yttZaHwV9gs'>Video</a> (starts at 14:52)</li>
 <li><a href='https://docs.my-poppy.eu/230181025_Cloquet_Quickgrid.pdf'><b>Quickgrid : auto-localisation pour les secours lors de grands évènements</b></a> FOSS4G-BE, Bruxelles, 25-10-2018</li>
