--- a/_pages/presas.html
+++ b/_pages/presas.html
@@ -3,7 +3,7 @@ permalink: /presas/
 ---
 <b>Présentations</b> 
 <ul class='class_ul'>
-<li><a href="http://www.rescue-week.com/accueil.html"><b>QGIS pour les services de secours</b></a>, Rescue Week</a>, Paris, 6 avril 2019</li>
+<li><a href="https://docs.my-poppy.eu/201904_secours_expo_QGIS.pdf"><b>QGIS pour les services de secours</b></a>, <a href="http://www.rescue-week.com/accueil.html">Rescue Week</a>, Paris, 6 avril 2019</li>
 <li><a href="https://docs.my-poppy.eu/201903_begeo_track_6_osgeo_christophe_cloquet.pdf"><b>Outils libres : aussi pour les entreprises !</b></a>, <a href='https://begeo2019.be/fr/track-6'>Be Geo 2019</a>, Bruxelles, 19 mars 2019</li>
 <li><a href='https://docs.my-poppy.eu/20181203_carto_101_charles_peguy_pour_diffusion.pdf'><b>Cartographie évènementielle</b></a> Institut Charles Péguy, Louvain-la-Neuve, décembre 2018</li>
 <li><a href='https://docs.my-poppy.eu/20181027_geong_poppy_v2.pdf'><b>GAFAM and/or Open source?</b></a> <a href="http://www.cartong.org/geong/2018">GeoONG</a>, Chambéry, octobre 2018 <a href='https://www.youtube.com/watch?v=DmbYuWOOcEM&frags=pl%2Cwn&fbclid=IwAR3SRhn1gxxzOvgEDnyUvsvIKmcHyl0Rp20yC7eAgMjqtkz1yttZaHwV9gs'>Video</a> (starts at 14:52)</li>
