--- a/_pages/workshops.html
+++ b/_pages/workshops.html
@@ -1,6 +1,10 @@
 ---
 permalink: /workshops/
 ---
+
+<iframe src="https://www.eventbrite.com/o/poppy-7611352101"></iframe> 
+
+
 <a href='https://www.eventbrite.com/e/belgian-emergency-services-developers-gathering-tickets-71822227215'>Nov 2019 : <b>Belgian Emergency Services Developers Gathering</b></a><br>
 <a href='https://www.eventbrite.com/e/multi-collaboration-operationnelle-en-temps-reel-strategies-et-outils-tickets-65406102413'>Sep 2019 : <b>Gestion de crise: outils et stratégies de collaboration en temps réel</b></a> - ateliers D1-D2 et MULTI<br>
 <a href='https://www.eventbrite.com/e/cartographie-avec-qgis-pour-les-services-de-secours-et-de-prevention-initiation-tickets-6256363050'>Juil/août 2019 : <b>Cartographie avec QGIS pour les services de secours</b> : introduction</b></a> (Bruxelles et Namur)<br>
