--- a/_pages/workshops.html
+++ b/_pages/workshops.html
@@ -1,9 +1,9 @@
 ---
 permalink: /workshops/
 ---
-
+<div style='width:100%'>
 <iframe src="https://www.eventbrite.com/o/poppy-7611352101"></iframe> 
-
+</div>
 
 <a href='https://www.eventbrite.com/e/belgian-emergency-services-developers-gathering-tickets-71822227215'>Nov 2019 : <b>Belgian Emergency Services Developers Gathering</b></a><br>
 <a href='https://www.eventbrite.com/e/multi-collaboration-operationnelle-en-temps-reel-strategies-et-outils-tickets-65406102413'>Sep 2019 : <b>Gestion de crise: outils et stratégies de collaboration en temps réel</b></a> - ateliers D1-D2 et MULTI<br>
