--- a/_pages/workshops.html
+++ b/_pages/workshops.html
@@ -2,10 +2,10 @@
 permalink: /workshops/
 ---
 <div style='width:100%'>
-<iframe src="https://www.eventbrite.com/o/poppy-7611352101"></iframe> 
+<iframe style='width:100%' src="https://www.eventbrite.com/o/poppy-7611352101"></iframe> 
 </div>
 
-<a href='https://www.eventbrite.com/e/belgian-emergency-services-developers-gathering-tickets-71822227215'>Nov 2019 : <b>Belgian Emergency Services Developers Gathering</b></a><br>
+<!--a href='https://www.eventbrite.com/e/belgian-emergency-services-developers-gathering-tickets-71822227215'>Nov 2019 : <b>Belgian Emergency Services Developers Gathering</b></a><br>
 <a href='https://www.eventbrite.com/e/multi-collaboration-operationnelle-en-temps-reel-strategies-et-outils-tickets-65406102413'>Sep 2019 : <b>Gestion de crise: outils et stratégies de collaboration en temps réel</b></a> - ateliers D1-D2 et MULTI<br>
 <a href='https://www.eventbrite.com/e/cartographie-avec-qgis-pour-les-services-de-secours-et-de-prevention-initiation-tickets-6256363050'>Juil/août 2019 : <b>Cartographie avec QGIS pour les services de secours</b> : introduction</b></a> (Bruxelles et Namur)<br>
 <a href='https://www.eventbrite.com/e/cartographie-avec-qgis-introduction-tout-public-tickets-47741340635'>Juil/août/sept/oct 2018 : <b>Cartographie avec QGIS pour les services de secours</b> : introduction</a><br>→ 39 personnes formées en 2018 !<br>
@@ -15,7 +15,7 @@ permalink: /workshops/
 <a href=''>Jun 2017 : <b>Plans d'urgence</b> : aménagement, équipement et bonnes pratiques en salle de crise (2)</a><br>
 <a href='https://www.eventbrite.com/e/plans-durgence-amenagement-equipement-et-bonnes-pratiques-en-salle-de-crise-tickets-31108448206?ref=estw#'>Mar 2017 : <b>Plans d'urgence</b> : aménagement, équipement et bonnes pratiques en salle de crise (1)</a><br>
 <a href='https://www.eventbrite.com/e/lalerte-en-situation-de-crise-tickets-27796621443'>Oct 2016 : <b>Alerte</b> et circulation de l'information en situation de crise</a><br>
-<a href='https://www.eventbrite.com/e/fete-ou-securite-les-dilemmes-de-lorganisateur-registration-13834965755'>Dec 2014 : <b>Fête ou sécurité ? </b> Les dilemmes de l'organisateur</a><br>
+<a href='https://www.eventbrite.com/e/fete-ou-securite-les-dilemmes-de-lorganisateur-registration-13834965755'>Dec 2014 : <b>Fête ou sécurité ? </b> Les dilemmes de l'organisateur</a><br-->
 
 <br><a href='mailto:info@my-poppy.eu?subject=Ateliers' target='_blank' style='background:#cb732b; color:white; border-radius:5px;padding:10px'>M'informer des prochains ateliers</a>
 
