--- a/_pages/workshops.html
+++ b/_pages/workshops.html
@@ -5,7 +5,7 @@ permalink: /workshops/
 <br><a href='mailto:info@my-poppy.eu?subject=Ateliers' target='_blank' style='background:#cb732b; color:white; border-radius:5px;padding:10px'>M'informer des prochains ateliers</a>
 
 <div style='width:100%'>
-<iframe style='width:100%' src="https://www.eventbrite.com/o/poppy-7611352101"></iframe> 
+<iframe style='width:100%;height:1600px' src="https://www.eventbrite.com/o/poppy-7611352101"></iframe> 
 </div>
 
 <!--a href='https://www.eventbrite.com/e/belgian-emergency-services-developers-gathering-tickets-71822227215'>Nov 2019 : <b>Belgian Emergency Services Developers Gathering</b></a><br>
