--- a/_pages/customers.html
+++ b/_pages/customers.html
@@ -12,7 +12,7 @@ permalink: /customers/
             <div style="text-align:center">
              		<span class="adapt_img">
 				<a href="http://www.provincedeliege.be/fr/gouverneur">
-	                                <img src='images/prov_liege.png' style='height:6em'></img>
+	                                <img src='/images/prov_liege.png' style='height:6em'></img>
 				</a>
                         </span>
 	
@@ -23,124 +23,124 @@ permalink: /customers/
                         </span>
 			<span class="adapt_img">
 				<a href="http://be.brussels/siamu/a-propos-du-siamu">
-	                                <img src='images/siamu.png?a=1' style='height:6em'></img>
+	                                <img src='/images/siamu.png?a=1' style='height:6em'></img>
 				</a>
                         </span>
 			<span class="adapt_img">
 				<a href="http://www.jette.be/">
-	                                <img src='images/jette.be.png' style='height:6em;'></img>
+	                                <img src='/images/jette.be.png' style='height:6em;'></img>
 				</a>
                         </span>
 			<span class="adapt_img">
 				<a href="http://www.libramontchevigny.be">
-	                                <img src='images/libramontlogo.png' style='height:6em; '></img>
+	                                <img src='/images/libramontlogo.png' style='height:6em; '></img>
 				</a>
                         </span>
                         <span class="adapt_img">
 				<a href="https://www.waterloo2015.org/">
-	                                <img src='images/event7.png' style='height:6em'></img>
+	                                <img src='/images/event7.png' style='height:6em'></img>
 				</a>
                         </span>
 			<span class="adapt_img">		
 				<a href="http://www.hap.be">
-	                                <img src='images/event14.png?a=1' style='height:6em'></img>
+	                                <img src='/images/event14.png?a=1' style='height:6em'></img>
 				</a>
                         </span>
 			<span class="adapt_img">
 				<a href="http://www.brugouverneur.irisnet.be/">
-	                                <img src='images/event8.png' style='height:6em'></img>
+	                                <img src='/images/event8.png' style='height:6em'></img>
 				</a>
                         </span>
 			
 			<span class="adapt_img">
                             	<a href="http://www.croix-rouge.be/">
-                                	<img src='images/event4.png' style='height:6em'></img>
+                                	<img src='/images/event4.png' style='height:6em'></img>
                              	</a>
                         </span>
 		
 			<span class="adapt_img">
 				<a href="https://www.civieleveiligheid.be/">
-	                                <img src='images/112.png' style='height:6em'></img>
+	                                <img src='/images/112.png' style='height:6em'></img>
 				</a>
                         </span>
 			<span class="adapt_img">
 				<a href="http://www.g4s.be/">
-	                                <img src='images/g4S.png' style='height:6em'></img>
+	                                <img src='/images/g4S.png' style='height:6em'></img>
 				</a>
                         </span>
 			<span class="adapt_img">
 				<a href="http://www.europ-assistance.be/">
-	                                <img src='images/event11.png' style='height:6em'></img>
+	                                <img src='/images/event11.png' style='height:6em'></img>
 				</a>
                         </span>
 		
 			<span class="adapt_img">
 				<a href="http://www.chrh.be/">
-	                                <img src='images/logo_chrhuy.png' style='height:6em'></img>
+	                                <img src='/images/logo_chrhuy.png' style='height:6em'></img>
 				</a>
                         </span>
 
-			<span class="adapt_img">
+			<!--span class="adapt_img">
 				<a href="https://www.oxfamsol.be/">
-	                                <img src='images/oxfam.png' style='height:5.5em'></img>
+	                                <img src='/images/oxfam.png' style='height:5.5em'></img>
 				</a>
-                        </span>
+                        </span-->
 			
 			<span class="adapt_img">
 				<a href="https://www.health.belgium.be">
-	                                <img src='images/fps-health-logo-front-fr.png' style='height:5.5em'></img>
+	                                <img src='/images/fps-health-logo-front-fr.png' style='height:5.5em'></img>
 				</a>
                         </span>
 			<span class="adapt_img">
 				<a href="http://www.tanit-developpement.com/">
-	                                <img src='images/tanit.png' style='height:6em;'></img>
+	                                <img src='/images/tanit.png' style='height:6em;'></img>
 				</a>
                         </span>			<span class="adapt_img">
 				<a href="http://www.sesamegroup.be/">
-	                                <img src='images/event5.png' style='height:6em'></img>
+	                                <img src='/images/event5.png' style='height:6em'></img>
 				</a>
                         </span>
 			<span class="adapt_img">
 				<a href="http://www.fluxology.be/">
-	                                <img src='images/event10.png' style='height:6em'></img>
+	                                <img src='/images/event10.png' style='height:6em'></img>
 				</a>
                         </span>
 		
 			<span class="adapt_img">
 				<a href="http://fiesta-latina.be/fr/informations">
-                                	<img src='images/event0.png' style='height:6em'></img>
+                                	<img src='/images/event0.png' style='height:6em'></img>
 				</a>
                         </span>
                         
                         
 			<span class="adapt_img">		
 				<a href="http://www.wabu.eu">
-	                                <img src='images/event13.png' style='height:6em'></img>
+	                                <img src='/images/event13.png' style='height:6em'></img>
 				</a>
                         </span>
 			<span class="adapt_img">
 				<a href="http://www.vo-event.be/">
-	                                <img src='images/event6.png' style='height:6em'></img>
+	                                <img src='/images/event6.png' style='height:6em'></img>
 				</a>
                         </span>
 			<span class="adapt_img">
 				<a href="http://helicopteremedical.be/fr">
-	                                <img src='images/cmh.png' style='height:6em'></img>
+	                                <img src='/images/cmh.png' style='height:6em'></img>
 				</a>
                         </span>
 			<span class="adapt_img">
 				<a href="http://www.protectionciviledunord.fr/">
-	                                <img src='images/event9.png?a=1' style='height:6em'></img>
+	                                <img src='/images/event9.png?a=1' style='height:6em'></img>
 				</a>
                         </span>
 <span class="adapt_img">
 				<a href="http://www.croix-rouge.be/volontaires/news-agenda/agenda/formule-deux-en-un-a-bruxelles-capitale-pour-feter-les-150-ans-de-la-croix-rouge/">
-                                	<img src='images/event1.png' style='height:6em'></img>
+                                	<img src='/images/event1.png' style='height:6em'></img>
 				</a>
                         </span>
 <span class="adapt_img">
 				<a href="http://www.ffsbxl.be/">
-	                                <img src='images/event3.png' style='height:6em'></img>
+	                                <img src='/images/event3.png' style='height:6em'></img>
 				</a>
                         </span>
 			<!--span class="adapt_img">
