--- a/_pages/customers.html
+++ b/_pages/customers.html
@@ -1,12 +1,17 @@
 ---
 permalink: /customers/
 ---
- 
+ 	<style>
+	.adapt_img
+		{
+				height:3em
+		}
+	</style>
 
    
             <h1>Proud to serve our customers</h1>
       
-
+	
 	<section id="customers" class="customers"> 
         <div class="container">
             <div style="text-align:center">
