--- a/_pages/customers.html
+++ b/_pages/customers.html
@@ -2,10 +2,14 @@
 permalink: /customers/
 ---
  	<style>
+	.adapt_img img
+	{
+		background:lightgray;
+	}
 	.adapt_img
-		{
-				height:3em
-		}
+	{
+		border-radius:5px; padding:10px; background:lightgray; height:8em; margin:10px;padding:10px;
+	}
 	</style>
 
    
