--- a/_pages/customers.html
+++ b/_pages/customers.html
@@ -2,18 +2,19 @@
 permalink: /customers/
 ---
  	<style>
+	.image-popup {background:transparent}
 	.adapt_img img
 	{
 		background:lightgray;
 	}
 	.adapt_img
 	{
-		border-radius:5px; padding:10px; background:lightgray; height:8em; margin:10px;padding:10px;
+		border-radius:5px; padding:10px; background:lightgray; height:8em!important; margin:10px;padding:10px;
 	}
 	</style>
 
    
-            <h1>Proud to serve our customers</h1>
+        <h1>Proud to serve our customers!</h1>
       
 	
 	<section id="customers" class="customers"> 
