--- a/_pages/customers.html
+++ b/_pages/customers.html
@@ -9,7 +9,7 @@ permalink: /customers/
 	}
 	.adapt_img
 	{
-		border-radius:5px; padding:10px; background:lightgray; height:6em!important; margin:10px;padding:10px;
+		border-radius:5px; padding:10px; background:lightgray; height:6em!important; margin:10px;padding:50px!important;
 	}
 	</style>
 
@@ -19,7 +19,7 @@ permalink: /customers/
 	
 	<section id="customers" class="customers"> 
         <div class="container">
-            <div style="text-align:center">
+            <div style="text-align:left">
              		<span class="adapt_img">
 				<a href="http://www.provincedeliege.be/fr/gouverneur">
 	                                <img src='/images/prov_liege.png' style='height:4em'></img>
