--- a/_pages/customers.html
+++ b/_pages/customers.html
@@ -19,7 +19,7 @@ permalink: /customers/
 	
 	<section id="customers" class="customers"> 
         <div class="container">
-            <div style="text-align:left">
+            <div style="text-align:left;background:lightgray;">
              		<span class="adapt_img">
 				<a href="http://www.provincedeliege.be/fr/gouverneur">
 	                                <img src='/images/prov_liege.png' style='height:4em'></img>
