--- a/_pages/customers.html
+++ b/_pages/customers.html
@@ -7,10 +7,10 @@ permalink: /customers/
 	{
 		background:lightgray;
 	}
-	.adapt_img
+	/*.adapt_img
 	{
 		border-radius:5px; padding:10px; background:lightgray; height:6em!important; margin:10px;padding:30px!important;
-	}
+	}*/
 	</style>
 
    <div style="text-align:left;background:lightgray;">
