--- a/_pages/customers.html
+++ b/_pages/customers.html
@@ -13,7 +13,7 @@ permalink: /customers/
 	}*/
 	</style>
 
-   <div style="text-align:left;background:lightgray;">
+   <div style="text-align:left;background:lightgray;color:black">
         <h1>Proud to serve our customers!</h1>
       
 	
@@ -98,7 +98,7 @@ permalink: /customers/
 			
 			<span class="adapt_img">
 				<a href="https://www.health.belgium.be">
-	                                <img src='/images/fps-health-logo-front-fr.png' style='height:5.5em'></img>
+	                                <img src='/images/fps-health-logo-front-fr.png' style='height:3.5em'></img>
 				</a>
                         </span>
 			<span class="adapt_img">
