--- a/_pages/customers.html
+++ b/_pages/customers.html
@@ -11,6 +11,10 @@ permalink: /customers/
 	{
 		border-radius:5px; padding:10px; background:lightgray; height:6em!important; margin:10px;padding:30px!important;
 	}*/
+	.adapt_img
+	{
+			display:block
+	}
 	</style>
 
    <div style="text-align:left;background:lightgray;color:black">
