--- a/_pages/customers.html
+++ b/_pages/customers.html
@@ -5,7 +5,7 @@ permalink: /customers/
 	.image-popup {background:transparent}
 	.adapt_img img
 	{
-		background:lightgray;
+		/*background:lightgray;*/
 	}
 	/*.adapt_img
 	{
@@ -17,7 +17,7 @@ permalink: /customers/
 	}
 	</style>
 
-   <div style="text-align:left;background:lightgray;color:black">
+   <div style="text-align:center;">
         <h1>Proud to serve our customers!</h1>
       
 	
