--- a/_pages/customers.html
+++ b/_pages/customers.html
@@ -13,7 +13,7 @@ permalink: /customers/
 	}*/
 	.adapt_img
 	{
-			display:block;margin-bottom:.5em;
+			display:block;margin-bottom:.5em;background:lightgray
 	}
 	</style>
 
