--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -3,15 +3,15 @@ permalink: /contact/
 ---
 <b>Contact us</b> 
 
-Living Apps sprl
+Living Apps sprl<br>
 
-rue Van Bortonne 7
-1090 Brussels
-Belgium
+rue Van Bortonne 7<br>
+1090 Brussels<br>
+Belgium<br><br>
 
-VAT/RC BE 0564.821.397
+VAT/RC BE 0564.821.397<br>
 
-Tel (+32)  485 . 087 . 949
+Tel (+32)  485 . 087 . 949<br>
 <a href='mailto:info@my-poppy.eu'>info@my-poppy.eu</a>
 
 
