--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -11,7 +11,7 @@ Belgium<br><br>
 
 VAT/RC BE 0564.821.397<br>
 
-Tel (+32)  485 . 087 . 949<br>
+Tel +32 485 087 949<br>
 <a href='mailto:info@my-poppy.eu'>info@my-poppy.eu</a>
 
 
